--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,15 @@
         android:theme="@style/AppTheme"
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_descriptor">
-        <activity android:name=".Activities.Activity">
+        <activity android:name=".Activities.SplashActivity" android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
+
+        </activity>
+        <activity android:name=".Activities.Activity">
         </activity>
         <activity android:name=".Activities.MainActivity">
         </activity>
