Added RecyclerView plus CardView for List of Medics, configured click-information and remote dp depend

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.RestAPITestActivity">
+        <activity android:name=".testClasses.RestAPITestActivity">
         </activity>
         <activity android:name=".Activities.MainActivity">
         </activity>
