navigation drawer + layout fixing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,8 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".testClasses.RestAPITestActivity">
+        <!--</activity>-->
+        <!--<activity android:name=".testClasses.RestAPITestActivity">-->
         </activity>
         <activity android:name=".Activities.MainActivity">
         </activity>
