--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,9 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:mediarouter-v7:28.0.0'
+
+    // Rx
+    implementation 'io.reactivex:rxjava:1.0.0'
+    implementation 'io.reactivex:rxandroid:0.24.0'
+
 }
