--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.yun.myapplication">
+    package="com.YELL.pocketMedic">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -17,10 +17,6 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        <!--</activity>-->
-        <!--<activity android:name=".testClasses.RestAPITestActivity">-->
-        </activity>
-        <activity android:name=".Activities.MainActivity">
         </activity>
         <activity android:name=".Activities.error404Activity">
         </activity>
